bug fixes, logo align

--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ body{margin:0}
   background-color: white;
   color: black;
     float: left;
-  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -194,10 +193,10 @@ p{
 }
 
 .logo { 
-  width: auto;
-  height: auto;
+  width: 40px;
+  height: 40px;
 
-  padding-left: 42.35%;
+  padding-left: 41.7%;
 }
 
 .logo img {
@@ -205,8 +204,8 @@ p{
 } 
 
 .logo2 { 
-  width: auto;
-  height: auto;
+  width: 40px;
+  height: 40px;
 
   padding-left: 5%;
 }
@@ -216,8 +215,8 @@ p{
 } 
 
 .logo3 { 
-  width: auto;
-  height: auto;
+  width: 40px;
+  height: 40px;
 
   padding-left: 5%;
 }
@@ -234,4 +233,3 @@ p{
 .smolfont {
 	font-size: 15px;
 }
-
